chore: 배포하기 위해 설정을 추가했습니다.